--- a/html/index.html
+++ b/html/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid landing-space">
+        <div class="container-fluid">
             <div class="container-fluid landing-location">
                 <h3>What's your purpose?</h3>
                 <div class="landing-location-row">
