--- a/html/result.html
+++ b/html/result.html
@@ -59,13 +59,13 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid landing-space">
+        <div class="landing-space">
             <div class="container space-sec">
                 <a href="space1" class="space-anchor no-decor" data-space=1>
-                    <div class="space-block">
-                        <div class="col-sm-4 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <div class="space-block">
                             <div class="block-img col-xs-12">
-                                <div class="block-img-inner" style="background-image: url('space1.jpg');">
+                                <div class="block-img-inner" style="background-image: url('space.jpg');">
                                 </div>
                             </div>
                             <div class="block-text col-xs-12">
@@ -82,13 +82,70 @@
                                     </div>
                                     <div class="block-butt-right">
                                         <div class="block-price"><span>฿100</span>/ชม.</div>
-                                        <div class="block-btn btn btn-primary">ดูรายละเอียด</div>
+                                        <div class="block-btn btn btn-primary">Book</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </a>
+                <a href="space1" class="space-anchor no-decor" data-space=1>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <div class="space-block">
+                            <div class="block-img col-xs-12">
+                                <div class="block-img-inner" style="background-image: url('space.jpg');">
+                                </div>
+                            </div>
+                            <div class="block-text col-xs-12">
+                                <h4>A hotel</h4>
+                                <div class="block-location"><span class="icon icon-pin" aria-hidden="true"></span>พญาไท</div>
+                                <!--div class="block-desc">
+                                Factory Cafe & Brew Bar เป็นคาเฟ่ สุดพิเศษสำหรับคนชอบกาแฟ  เปิดบริการอยู่ในกรุงเทพ ทางร้านจะเสิร์ฟเฉพาะกาแฟที่ได้ผลผลิตตามแต่ละฤดูกาล  และ คาเฟ่นี้ยังชอบแบ่งปันเรื่องราวในเรื่องสถานที่ที่มาและขั้นตอนกรรมวิธีของเมล็ดกาแฟ จนกลายมาเป็น รสชาติในแก้วกาแฟ
+                                </div-->
+                                <div class="block-buttom clearfix">
+                                    <div class="block-butt-left">
+                                        <div class="block-tag">Powernap</div>
+                                        <div class="block-tag">Powernap</div>
+                                        <div class="block-tag">Powernap</div>
+                                    </div>
+                                    <div class="block-butt-right">
+                                        <div class="block-price"><span>฿100</span>/ชม.</div>
+                                        <div class="block-btn btn btn-primary">Book</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="space1" class="space-anchor no-decor" data-space=1>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <div class="space-block">
+                            <div class="block-img col-xs-12">
+                                <div class="block-img-inner" style="background-image: url('space.jpg');">
+                                </div>
+                            </div>
+                            <div class="block-text col-xs-12">
+                                <h4>A hotel</h4>
+                                <div class="block-location"><span class="icon icon-pin" aria-hidden="true"></span>พญาไท</div>
+                                <!--div class="block-desc">
+                                Factory Cafe & Brew Bar เป็นคาเฟ่ สุดพิเศษสำหรับคนชอบกาแฟ  เปิดบริการอยู่ในกรุงเทพ ทางร้านจะเสิร์ฟเฉพาะกาแฟที่ได้ผลผลิตตามแต่ละฤดูกาล  และ คาเฟ่นี้ยังชอบแบ่งปันเรื่องราวในเรื่องสถานที่ที่มาและขั้นตอนกรรมวิธีของเมล็ดกาแฟ จนกลายมาเป็น รสชาติในแก้วกาแฟ
+                                </div-->
+                                <div class="block-buttom clearfix">
+                                    <div class="block-butt-left">
+                                        <div class="block-tag">Powernap</div>
+                                        <div class="block-tag">Powernap</div>
+                                        <div class="block-tag">Powernap</div>
+                                    </div>
+                                    <div class="block-butt-right">
+                                        <div class="block-price"><span>฿100</span>/ชม.</div>
+                                        <div class="block-btn btn btn-primary">Book</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
