--- a/html/result.html
+++ b/html/result.html
@@ -20,40 +20,42 @@
                     </a>
                 </div>
                 <div class="header-content">
-                    <div class="header-search col-lg-8">
-                        <div class="input-group">
-                            <div class="header-select form-control rounded-form-control">
-                                <div class="header-search-label small">Where</div>
-                                <select name="location">
-                                    <option value="bangkok">bangkok</option>
-                                    <option value="bangkok">bangkok</option>
-                                    <option value="bangkok">bangkok</option>
-                                    <option value="bangkok">bangkok</option>
-                                    <option value="bangkok">bangkok</option>
-                                </select>
+                    <div class="container">
+                        <div class="header-search col-xs-12">
+                            <div class="input-group">
+                                <div class="header-select form-control rounded-form-control">
+                                    <div class="header-search-label small">Where</div>
+                                    <select name="location">
+                                        <option value="bangkok">bangkok</option>
+                                        <option value="bangkok">bangkok</option>
+                                        <option value="bangkok">bangkok</option>
+                                        <option value="bangkok">bangkok</option>
+                                        <option value="bangkok">bangkok</option>
+                                    </select>
+                                </div>
+                                <div class="header-select form-control rounded-form-control">
+                                    <div class="header-search-label small">When</div>
+                                    <input type="date" name="date">
+                                </div>
+                                <div class="header-select form-control rounded-form-control">
+                                    <div class="header-search-label small">For What</div>
+                                    <select name="purpose">
+                                        <option value="powernap">powernap</option>
+                                    </select>
+                                </div>
+                                <div class="header-select header-people form-control rounded-form-control">
+                                    <div class="header-search-label small">People</div>
+                                    <select name="purpose">
+                                        <option value=1>1</option>
+                                        <option value=1>2</option>
+                                        <option value=1>3</option>
+                                        <option value=1>4</option>
+                                    </select>
+                                </div>
+                                <span class="input-group-btn">
+                                    <button class="btn btn-primary" type="button" id="searchbtn"  data-toggle="modal" data-target="#locmodal">Search</button>
+                                </span>
                             </div>
-                            <div class="header-select form-control rounded-form-control">
-                                <div class="header-search-label small">When</div>
-                                <input type="date" name="date">
-                            </div>
-                            <div class="header-select form-control rounded-form-control">
-                                <div class="header-search-label small">For What</div>
-                                <select name="purpose">
-                                    <option value="powernap">powernap</option>
-                                </select>
-                            </div>
-                            <div class="header-select header-people form-control rounded-form-control">
-                                <div class="header-search-label small">People</div>
-                                <select name="purpose">
-                                    <option value=1>1</option>
-                                    <option value=1>2</option>
-                                    <option value=1>3</option>
-                                    <option value=1>4</option>
-                                </select>
-                            </div>
-                            <span class="input-group-btn">
-                                <button class="btn btn-primary" type="button" id="searchbtn"  data-toggle="modal" data-target="#locmodal">Search</button>
-                            </span>
                         </div>
                     </div>
                 </div>
@@ -71,9 +73,6 @@
                             <div class="block-text col-xs-12">
                                 <h4>A hotel</h4>
                                 <div class="block-location"><span class="icon icon-pin" aria-hidden="true"></span>พญาไท</div>
-                                <!--div class="block-desc">
-                                Factory Cafe & Brew Bar เป็นคาเฟ่ สุดพิเศษสำหรับคนชอบกาแฟ  เปิดบริการอยู่ในกรุงเทพ ทางร้านจะเสิร์ฟเฉพาะกาแฟที่ได้ผลผลิตตามแต่ละฤดูกาล  และ คาเฟ่นี้ยังชอบแบ่งปันเรื่องราวในเรื่องสถานที่ที่มาและขั้นตอนกรรมวิธีของเมล็ดกาแฟ จนกลายมาเป็น รสชาติในแก้วกาแฟ
-                                </div-->
                                 <div class="block-buttom clearfix">
                                     <div class="block-butt-left">
                                         <div class="block-tag">Powernap</div>
@@ -81,7 +80,7 @@
                                         <div class="block-tag">Powernap</div>
                                     </div>
                                     <div class="block-butt-right">
-                                        <div class="block-price"><span>฿100</span>/ชม.</div>
+                                        <div class="block-price"><span>฿100</span>/hr</div>
                                         <div class="block-btn btn btn-primary">Book</div>
                                     </div>
                                 </div>
@@ -109,7 +108,7 @@
                                         <div class="block-tag">Powernap</div>
                                     </div>
                                     <div class="block-butt-right">
-                                        <div class="block-price"><span>฿100</span>/ชม.</div>
+                                        <div class="block-price"><span>฿100</span>/hr</div>
                                         <div class="block-btn btn btn-primary">Book</div>
                                     </div>
                                 </div>
@@ -127,9 +126,6 @@
                             <div class="block-text col-xs-12">
                                 <h4>A hotel</h4>
                                 <div class="block-location"><span class="icon icon-pin" aria-hidden="true"></span>พญาไท</div>
-                                <!--div class="block-desc">
-                                Factory Cafe & Brew Bar เป็นคาเฟ่ สุดพิเศษสำหรับคนชอบกาแฟ  เปิดบริการอยู่ในกรุงเทพ ทางร้านจะเสิร์ฟเฉพาะกาแฟที่ได้ผลผลิตตามแต่ละฤดูกาล  และ คาเฟ่นี้ยังชอบแบ่งปันเรื่องราวในเรื่องสถานที่ที่มาและขั้นตอนกรรมวิธีของเมล็ดกาแฟ จนกลายมาเป็น รสชาติในแก้วกาแฟ
-                                </div-->
                                 <div class="block-buttom clearfix">
                                     <div class="block-butt-left">
                                         <div class="block-tag">Powernap</div>
@@ -137,7 +133,7 @@
                                         <div class="block-tag">Powernap</div>
                                     </div>
                                     <div class="block-butt-right">
-                                        <div class="block-price"><span>฿100</span>/ชม.</div>
+                                        <div class="block-price"><span>฿100</span>/hr</div>
                                         <div class="block-btn btn btn-primary">Book</div>
                                     </div>
                                 </div>
