--- a/html/space.html
+++ b/html/space.html
@@ -101,7 +101,7 @@
                         <div class="detail-heading col-md-4 col-xs-12">
                             Add ons
                         </div>
-                        <div class="col-md-8 col-xs-12">
+                        <div class="detail-line col-md-8 col-xs-12">
                             <ul class="row">
                                 <li class="col-md-6 col-xs-12"><input type="checkbox"> Free Wi-Fi  <span class="color-blue">฿150</span></li>
                                 <li class="col-md-6 col-xs-12"><input type="checkbox"> Free Wi-Fi  <span class="color-blue">฿150</span></li>
@@ -109,6 +109,16 @@
                                 <li class="col-md-6 col-xs-12"><input type="checkbox"> Free Wi-Fi  <span class="color-blue">฿150</span></li>
                                 <li class="col-md-6 col-xs-12"><input type="checkbox"> Free Wi-Fi  <span class="color-blue">฿150</span></li>
                             </ul>
+                        </div>
+                    </div>
+                    <div class="detail-sec row">
+                        <div class="detail-heading col-md-4 col-xs-12">
+                            Contact the host
+                        </div>
+                        <div class="col-md-8 col-xs-12">
+                            <span class="color-black">The host</span>
+                            <br>email@email.com
+                            <br>099-999-99999
                         </div>
                     </div>
             </div>
@@ -122,17 +132,6 @@
                     </div>
                     <div class="modal-body modal-booking" id="modalbooking">
                         <div class="input-row"><label>Date</label><input type="date" class="form-control" placeholder="mm/dd/yyyy"></div>
-                        <div class="input-row"><label>Time</label><input type="date" class="form-control" placeholder="mm/dd/yyyy"></div>
-                        <div class="input-row">
-                            <label>How many hours?</label>
-                            <select class="form-control space-hour-input">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                            </select>
-                        </div>
                         <div class="input-row">
                             <label>How many people?</label>
                             <select class="form-control space-hour-input">
@@ -143,7 +142,7 @@
                                 <option value="5">5</option>
                             </select>
                         </div>
-                        <label>เวลา</label>
+                        <label>Time</label>
                         <div class="hour-picker clearfix">
                             <div class="btn btn-default disabled col-xs-3 col-xxs-6" data-toggle="button" aria-pressed="false" autocomplete="off">6.00-7.00</div>
                             <div class="btn btn-default disabled col-xs-3 col-xxs-6" data-toggle="button" aria-pressed="false" autocomplete="off">7.00-8.00</div>
@@ -172,18 +171,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">ยกเลิก</button>
-                        <button type="button" class="buy-btn btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#soonmodal">ต่อไป</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal" id="soonmodal" tabindex="1" role="dialog" aria-labelledby="soonmodalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="icon icon-cancel" aria-hidden="true"></span></button>
-                        <span class="color-black">เว็บไซต์อยู่ในระหว่างการทดสอบ ขออภัยในความไม่สะดวก</span><br><br>สอบถามเพิ่มเติม ติดต่อ<br>contact.freshdesk@gmail.com
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="buy-btn btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#soonmodal">Next</button>
                     </div>
                 </div>
             </div>
