--- a/html/result.html
+++ b/html/result.html
@@ -19,6 +19,12 @@
                     <a href="#" class="header-logo-block no-decor">
                     </a>
                 </div>
+                <div class="register-btn">
+                    Register
+                </div>
+                <div class="login-btn">
+                    Login
+                </div>
                 <div class="header-content">
                     <div class="container">
                         <div class="header-search col-xs-12">
