--- a/html/space.html
+++ b/html/space.html
@@ -18,6 +18,12 @@
                 <a href="#" class="header-logo-block no-decor">
                 </a>
             </div>
+            <div class="register-btn">
+                Register
+            </div>
+            <div class="login-btn">
+                Login
+            </div>
         </div>
         <div class="container-fluid space-header space-image" style="background-image:url(space.jpg)">
         </div>
