--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,12 @@
                     <a href="#" class="header-logo-block no-decor">
                     </a>
                 </div>
+                <div class="register-btn">
+                    Register
+                </div>
+                <div class="login-btn">
+                    Login
+                </div>
                 <div class="header-content">
                     <div class="header-content-text">
                         <h1>Find a space for Power nap</h1>
