--- a/public/bussiness.html
+++ b/public/bussiness.html
@@ -28,8 +28,8 @@
                 </div></a>
                 <div class="header-content">
                     <div class="header-content-text">
-                        <h1>Monetize Your Space With HourSpace</h1>
-                        <h5>Increase your revenue by simply sharing your extra space every month.</h5>
+                        <h1>Monetize your space with hourSpace</h1>
+                        <h5>Maximize your revenue by simply sharing your extra space.</h5>
                     </div>
                     <div class="header-email col-lg-4">
                             <p>How you can do this?</P>
