--- a/public/result.html
+++ b/public/result.html
@@ -42,7 +42,7 @@
                                 </div>
                                 <div class="header-select form-control rounded-form-control">
                                     <div class="header-search-label small">When</div>
-                                    <input  type='text' class="form-control" name="date" id="dpd1">
+                                    <input  type='text' class="form-control" name="date" id="dpd1" placeholder="Date">
                                 </div>
                                 <div class="header-select form-control rounded-form-control">
                                     <div class="header-search-label small">For What</div>
