--- a/public/space.html
+++ b/public/space.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Freshdesk</title>
+        <title>HourSpace</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href = "bootstrap/css/bootstrap.css">
@@ -75,7 +75,7 @@
                 <div class="space-title-right col-md-4 col-sm-5 col-xs-12">
                     <div class="space-price-tag">
                         <div class="space-price"><span class="space-price-text">฿<span class="space-price-amount" data-value=100>100</span></span>/<span class="space-price-hour"></span>hr</div>
-                        <button type="button" class="space-btn btn btn-primary" data-toggle="modal" data-target="#buymodal">Book</button>
+                        <button type="button" class="space-btn btn btn-primary">Book</button>
                     </div>
                     <!--div class="space-right-box space-pricetagline small">
                         <div>Capacity: 10 people</div>
