--- a/public/space.html
+++ b/public/space.html
@@ -109,13 +109,13 @@
         </div>
         <div class="container space-middle">
             <div class="space-detail col-md-8 col-sm-7 col-xs-12">
-                    <div class="detail-sec row">
+                    <!--div class="detail-sec row">
                         <div class="detail-fullline space-desc col-xs-12">
                             <div class="block-tag">Powernap</div>
                             <div class="block-tag">Powernap</div>
                             <div class="block-tag">Powernap</div>
                         </div>
-                    </div>
+                    </div-->
                     <div class="detail-sec row">
                         <div class="detail-heading col-md-4 col-xs-12">
                             Amenities
