--- a/public/bussiness.html
+++ b/public/bussiness.html
@@ -29,14 +29,14 @@
                 <div class="header-content">
                     <div class="header-content-text">
                         <h1>Monetize your space with hourSpace</h1>
-                        <h5>Maximize your revenue by simply sharing your extra space.</h5>
+                        <h5>Increase your revenue by simply sharing your extra space.</h5>
                     </div>
                     <div class="header-email col-lg-4">
                             <p>How you can do this?</P>
                         <div class="input-group">
                             <input type="text" class="form-control rounded-form-control" placeholder="Email">
                             <span class="input-group-btn">
-                                <button class="btn btn-primary" type="button" id="searchbtn">Get Report</button>
+                                <button class="btn btn-primary" type="button" id="searchbtn">Get Your Free Report</button>
                             </span>
                         </div>
                     </div>
@@ -51,23 +51,23 @@
                     <div class="col-md-4 col-sm-4 col-xxs-12 location-col">
                         <img src="bus-icon1.jpg" width=150 height=150>
                         <h5 class="location-block-text color-black">
-                            SAAS Based Platform
+                            Flexible Management
                         </h5>
-                        Get your office space online in minutes. Create a free, detailed profile with high quality photos and video. Want tips? Chat with our Space Experts!
+                        All-in-one Cloud-based Check In - Out  Management System to simplify your operations.
                     </div>
                     <div class="col-md-4 col-sm-4 col-xxs-12 location-col">
                         <img src="bus-icon2.jpg" width=150 height=150>
                         <h5 class="location-block-text color-black">
-                            No Lease Policy
+                            Maximise your Revenue
                         </h5>
-                        Engage with prospective guests before they book your space. Connect directly within your profile to send messages, answer questions and even schedule tours.
+                        Simplified Integrated Revenue Management System for real-time insight, forecast, and decision making.
                     </div>
                     <div class="col-md-4 col-sm-4 col-xxs-12 location-col">
                         <img src="bus-icon3.jpg" width=150 height=150>
                         <h5 class="location-block-text color-black">
-                            Monetize your Space
+                            Premium Branding
                         </h5>
-                        Use the DASH License®, built to make short-term space sharing easy. We process initial payments and deposits as well as handle monthly recurring payments, so you don't have to.
+                        Take your brand to next Level through our branding and getting more customer insights
                     </div>
                 </div>
             </div>
@@ -76,10 +76,10 @@
             <div class="container">
                 <div class="col-xs-4">
                     <div class="testimonial-profile" style="background-image:url('profile1.jpg')"></div>
-                    <h5 class="testimonial-name">Mark Elchinoff</h5>
-                    CFO, NGINX
+                    <h5 class="testimonial-name">Bell in the Woods</h5>
+                    Hotel
                     <br><br>
-                    "The rent-by-the-desk approach enabled us to defray costs while maintaining our flexibility to move into the space when needed."
+                    “We have seen a 40% increase in bookings since using HourSpace”
                 </div>
             </div>
         </div>
@@ -88,23 +88,22 @@
             <div class="container">
                 <div class="pull-right col-xs-4">
                     <div class="testimonial-profile" style="background-image:url('profile2.jpg')"></div>
-                    <h5 class="testimonial-name">Mark Elchinoff</h5>
-                    CFO, NGINX
+                    <h5 class="testimonial-name">Joseph</h5>
+                    Dance Studio
                     <br><br>
-                    "The rent-by-the-desk approach enabled us to defray costs while maintaining our flexibility to move into the space when needed."
+                    "Thanks to HourSpace, I am able to cut down my rent 50% by renting the space in free hours"
                 </div>
             </div>
         </div>
         <div class="container-fluid bussiness-action">
             <div class="container">
-                <h3 class="bussiness-action-heading">It takes just a minute to create a free HourSpace listing for your space.
-                    <br>Join today to list your space fast.
+                <h3 class="bussiness-action-heading">You are one hour away to <br>maximise your revenue through HourSpace.
                 </h3>
                 <div class="header-email col-lg-4">
                     <div class="input-group">
                         <input type="text" class="form-control rounded-form-control" placeholder="Email">
                         <span class="input-group-btn">
-                            <button class="btn btn-primary" type="button" id="searchbtn">Get Started</button>
+                            <button class="btn btn-primary" type="button" id="searchbtn">Join Us!</button>
                         </span>
                     </div>
                 </div>
